# netquery

./: .gitignore  Cargo.toml  README.md
crates/agent_core_old/: Cargo.toml
crates/agent_core_old/prompts/: agent_system.txt
crates/agent_core_old/src/: agent.rs  lib.rs  tools.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/daemon/: Cargo.toml  build.rs
crates/daemon/proto/: netquery.proto
crates/daemon/src/: bootstrap.rs  lib.rs  main.rs  router.rs
crates/ingest_es/: Cargo.toml
crates/ingest_es/benches/: ingest_bulk.rs
crates/ingest_es/src/: flow_builder.rs  lib.rs  protocol.rs
crates/nl_gateway/: Cargo.toml
crates/nl_gateway/prompts/: multi_turn.txt
crates/nl_gateway/src/: lib.rs  multi_turn.rs
crates/nl_gateway/src/prompts/: es_system.txt
crates/parser/: Cargo.toml
crates/parser/benches/: parser_bench.rs
crates/parser/src/: lib.rs
crates/rag_engine/: Cargo.toml
crates/rag_engine/src/: lib.rs
crates/sniffer/: Cargo.toml
crates/sniffer/src/: lib.rs
