[workspace]
members = [
    "crates/sniffer",
    "crates/parser",
    "crates/nl_gateway",
    "crates/rag_engine",
    "crates/daemon",
    "crates/cli",
    "crates/ingest_es",
]
resolver = "2"

[workspace.dependencies]
pcap = "1.2"
etherparse = "0.14"
flume = "0.11"
hashbrown = "0.14"
llm = "1.2"
qdrant-client = "1.13"
tokio = { version = "1.38", features = ["full"] }
tonic = "0.11"
prometheus-client = "0.22"
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"