[package]
name = "cli"
version = "0.1.0"
edition = "2021"
description = "Command-line interface for netquery"

[[bin]]
name = "netquery"
path = "src/main.rs"

[dependencies]
daemon = { path = "../daemon" }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tokio = { workspace = true }
tonic = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
colored = "2.1"
comfy-table = "7.1"
env_logger = "0.11"
indicatif = "0.17"