[package]
name = "daemon"
version = "0.1.0"
edition = "2021"
description = "Main daemon process for netquery"

[features]
default = []
rag = ["nl_gateway/rag"]

[dependencies]
sniffer = { path = "../sniffer" }
parser = { path = "../parser" }
nl_gateway = { path = "../nl_gateway" }
rag_engine = { path = "../rag_engine" }
ingest_es = { path = "../ingest_es" }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tokio = { workspace = true }
tonic = { workspace = true }
prost = "0.12"
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
prometheus-client = { workspace = true }
futures = "0.3"
signal-hook = "0.3"
signal-hook-tokio = { version = "0.3", features = ["futures-v0_3"] }
flume = { workspace = true }
chrono = "0.4"
reqwest = { version = "0.11", features = ["json"] }
mockito = { version = "1.2", optional = true }
tokio-stream = { version = "0.1", features = ["net"] }

[build-dependencies]
tonic-build = "0.11"

[[bin]]
name = "netqueryd"
path = "src/main.rs"