[package]
name = "ingest_es"
version = "0.1.0"
edition = "2021"
description = "Elasticsearch bulk ingestion module for netquery"

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { version = "0.11", features = ["json"] }
flume = { workspace = true }
parser = { path = "../parser" }
chrono = { version = "0.4", features = ["serde"] }
backoff = "0.4"
async-trait = "0.1"
phf = { version = "0.11", features = ["macros"] }
once_cell = "1.19"

[dev-dependencies]
tokio-test = "0.4"
criterion = { version = "0.5", features = ["async_tokio"] }
rand = "0.8"
fake = { version = "2.9", features = ["derive"] }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "test-util"] }
mockito = "1.2"

[[bench]]
name = "ingest_bulk"
harness = false