[package]
name = "nl_gateway"
version = "0.1.0"
edition = "2021"
description = "Natural language intent-to-query gateway for netquery"

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
regex = "1.10"
llm = "1.2"
reqwest = { version = "0.11", features = ["json"] }

[dependencies.rag_engine]
path = "../rag_engine"
optional = true

[features]
default = ["rag"]
rag = ["dep:rag_engine"]