[package]
name = "rag_engine"
version = "0.1.0"
edition = "2021"
description = "RAG (Retrieval-Augmented Generation) engine for netquery"

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
llm = { workspace = true }
qdrant-client = { workspace = true }
async-trait = "0.1"
once_cell = "1.19"